deploy/k8s/app/gms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gms-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gms-service
  template:
    metadata:
      labels:
        app: gms-service
    spec:
      containers:
      - name: gms-service
        image: game_product/gms:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 50052 # gRPC
        resources:
          limits:
            cpu: "4000m"
            memory: "1024Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: gms-service
spec:
  selector:
    app: gms-service
  ports:
    - name: grpc
      port: 50052
      targetPort: 50052
