deploy/k8s/app/ops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ops-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ops-service
  template:
    metadata:
      labels:
        app: ops-service
    spec:
      containers:
      - name: ops-service
        image: game_product/ops:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080 
        resources:
          limits:
            cpu: "4000m"
            memory: "1024Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ops-service
spec:
  selector:
    app: ops-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
